objects/Veda_Electoral_Roll_Result_List__c.object
<CustomObject>
    <fields>
        <fullName>Electoral_Roll_Result_Match_Summary__c</fullName>
        <label>Electoral Roll Result Match Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veri_Check_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veri Check Report</label>
        <referenceTo>Veda_Fraud_Veri_Check_Report__c</referenceTo>
        <relationshipName>Electoral_Roll_Result_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Electoral Roll Result List</label>
    <nameField>
        <label>Electoral Roll Result List  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Electoral Roll Result List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>